WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187011
[iPad apps on macOS] Web process crashes when attempting to play embedded YouTube video in News
https://bugs.webkit.org/show_bug.cgi?id=187011
Summary
[iPad apps on macOS] Web process crashes when attempting to play embedded You...
Wenson Hsieh
Reported
2018-06-25 13:02:10 PDT
<
rdar://problem/40906808
>
Attachments
Patch
(3.24 KB, patch)
2018-06-25 13:22 PDT
,
Wenson Hsieh
thorton
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(3.20 KB, patch)
2018-06-25 14:47 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews204 for win-future
(12.76 MB, application/zip)
2018-06-25 15:15 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-06-25 13:22:16 PDT
Created
attachment 343529
[details]
Patch
Tim Horton
Comment 2
2018-06-25 13:41:46 PDT
Comment on
attachment 343529
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=343529&action=review
> Source/WebCore/platform/RemoteCommandListener.cpp:31 > +#if (!PLATFORM(IOS) && !PLATFORM(MAC)) || ENABLE(MINIMAL_SIMULATOR)
In the ideal world this would become something like HAS(MEDIAREMOTE)
Wenson Hsieh
Comment 3
2018-06-25 14:26:38 PDT
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 343529
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=343529&action=review
> > > Source/WebCore/platform/RemoteCommandListener.cpp:31 > > +#if (!PLATFORM(IOS) && !PLATFORM(MAC)) || ENABLE(MINIMAL_SIMULATOR) > > In the ideal world this would become something like HAS(MEDIAREMOTE)
Good point. It looks like HAVE(MEDIA_PLAYER) already exists, and it's closer to what I should be switching on for this bug. I'll change this to use that instead.
Wenson Hsieh
Comment 4
2018-06-25 14:47:02 PDT
Created
attachment 343544
[details]
Patch for landing
EWS Watchlist
Comment 5
2018-06-25 15:15:44 PDT
Comment on
attachment 343529
[details]
Patch
Attachment 343529
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8337342
New failing tests: http/tests/preload/onload_event.html
EWS Watchlist
Comment 6
2018-06-25 15:15:56 PDT
Created
attachment 343548
[details]
Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 7
2018-06-25 16:54:37 PDT
Comment on
attachment 343544
[details]
Patch for landing Clearing flags on attachment: 343544 Committed
r233182
: <
https://trac.webkit.org/changeset/233182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug