[iPad apps on macOS] Web process crashes when attempting to play embedded YouTube video in News https://bugs.webkit.org/show_bug.cgi?id=187011 <rdar://problem/40906808>

Reviewed by Tim Horton.

Disable remote media commands when running iOS WebKit on macOS. The iOS flavor of RemoteCommandListener
currently throws an exception when attempting to soft-link the MediaPlayer framework, which prevents video from
being played altogether. For a followup tracking touch bar integration in iOS WebKit on macOS, see:
<rdar://problem/39164732>.

Manually tested by playing a YouTube video in News.

* platform/RemoteCommandListener.cpp:
* platform/ios/RemoteCommandListenerIOS.h:
* platform/ios/RemoteCommandListenerIOS.mm:


Canonical link: https://commits.webkit.org/202273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233182 268f45cc-cd09-0410-ab3c-d52691b4dbfc